--- a/index.html
+++ b/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>FlashPoint Cybersecurity</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body {
-      background: #0b0f19;
-      color: #e6e6e6;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 60px;
-    }
-    h1 { color: #00ffd5; }
-    p { max-width: 600px; margin: auto; }
-  </style>
-</head>
-<body>
-  <h1>FlashPoint Cybersecurity</h1>
-  <p>
-    Daily cybersecurity news, attack analysis, tools, and protection guides.
-    Powered by AI & automation.
-  </p>
-  <p>🚀 Automated | 🔐 Secure | 🤖 AI-Driven</p>
-</body>
-</html>
+<meta charset="UTF-8">
+<title>FlashPoint Cybersecurity</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<style>
+body {
+  margin: 0;
+  font-family: 'Segoe UI', Arial, sans-serif;
+  background: radial-gradient(circle at top, #0f2027, #000);
+  color: #e0e0e0;
+}
+header {
+  padding: 60px 20px;
+  text-align: center;
+}
+header h1 {
+  color: #00ffd5;
+  font-size: 3rem;
+}
+header p {
+  max-width: 700px;
+  margin: auto;
+  font-size: 1.1rem;
+}
+nav {
+  background: #05080f;
+  padding: 15px;
+  text-align: center;
+}
+nav a {
+  color: #00ffd5;
+  margin: 0 15px;
+  text-decora
